--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,10 +54,10 @@
         app:layout_constraintTop_toBottomOf="@+id/medium_rectangle_banner_button"/>
 
     <Button
-        android:id="@+id/interstital_ad_button"
+        android:id="@+id/recyclerView_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show Interstial"
+        android:text="Recycler View"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
